--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,7 +4,7 @@
     "language": "language",
     "cancel": "cancel",
     "SelectName": "select a name",
-    "listOrders": "list of orders",
+    "listOrders": "orders",
     "login": "login",
     "ChooseColumns": "Choose Columns",
     "quit": "quit",
