--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -4,7 +4,7 @@
     "language": "язык",
     "cancel": "отменить",
     "SelectName": "выберите имя",
-    "listOrders": "список заказов",
+    "listOrders": "заказы",
     "login": "авторизоваться",
     "quit": "выйти",
     "ChooseColumns": "Выбрать столбцы",
