--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -4,7 +4,7 @@
     "language": "мова",
     "cancel": "скасувати",
     "SelectName": "виберіть ім'я",
-    "listOrders": "замовленя",
+    "listOrders": "замовлення",
     "login": "логін",
     "quit": "вийти",
     "filters": "фільтри",
