--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -8,7 +8,7 @@
     "FastFilterModal": "быстрые фильтры",
     "filters": "фильтры",
     "datePeriod": "период",
-    "login": "войти",
+    "login": "авторизоваться",
     "confirm": "подтвердить",
     "quit": "выйти",
     "ChooseColumns": "Выбрать столбцы",
