--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -2,14 +2,14 @@
   "language": "язык",
   "loginPage": {
     "language": "язык",
-    "cancel": "отменить",
+    "cancel": "очистить",
     "SelectName": "выберите имя",
     "listOrders": "заказы",
     "FastFilterModal": "быстрые фильтры",
     "filters": "фильтры",
     "datePeriod": "период",
     "login": "войти",
-    "confirm": "подтвердить",
+    "confirm": "применить",
     "quit": "выйти",
     "ChooseColumns": "Выбрать столбцы",
     "password": "пароль",
