--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,23 +34,24 @@
     "closeCropped": "close",
     "workOnExecution": "work on execution",
     "months": "months",
-    "all": "все",
-    "completed": "выполненные",
-    "unclosed": "незакрытые",
-    "closed": "закрытые",
-    "today": "сегодня",
-    "yesterday": "вчера",
-    "lastSevenDays": "последние 7 дней",
-    "thisWeek": "текущая неделя",
-    "currentMonth": "текущий месяц",
-    "currentQuarter": "текущий квартал",
-    "thisYear": "текущий год",
-    "lastWeek": "прошедшая неделя",
-    "lastMonth": "прошлый месяц",
-    "lastQuarter": "прошлый квартал",
-    "lastYear": "прошлый год",
-    "pause": "пауза",
-    "paid": "оплаченые",
-    "unpaid": "неоплаченые"
+    "all": "all",
+    "completed": "completed",
+    "unclosed": "unclosed",
+    "closed": "closed",
+    "today": "today",
+    "yesterday": "yesterday",
+    "lastSevenDays": "last seven days",
+    "thisWeek": "this week",
+    "currentMonth": "current month",
+    "currentQuarter": "current quarter",
+    "thisYear": "this year",
+    "lastWeek": "last week",
+    "lastMonth": "last month",
+    "lastQuarter": "last quarter",
+    "lastYear": "last year",
+    "pause": "pause",
+    "paid": "paid",
+    "unpaid": "unpaid",
+    "complete": "complete"
   }
 }
