--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -51,7 +51,8 @@
     "lastYear": "ostatni rok",
     "pause": "pauza",
     "paid": "tylko już zapłacone",
-    "unpaid": "tylko niezapłacone"
+    "unpaid": "tylko niezapłacone",
+    "complete": "zakończyć"
 
   }
 }
