--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -7,7 +7,7 @@
     "payment": "оплата",
     "period": "период",
     "search": "поиск",
-    "start": "почати",
+    "start": "начать",
     "clear": "очистить",
     "cancel": "отменить",
     "SelectName": "выберите имя",
@@ -51,6 +51,7 @@
     "lastYear": "прошлый год",
     "pause": "пауза",
     "paid": "оплаченые",
-    "unpaid": "неоплаченые"
+    "unpaid": "неоплаченые",
+    "complete": "завершить"
   }
 }
