--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -34,6 +34,7 @@
     "closeCropped": "закр.",
     "workOnExecution": "работы на выполнении",
     "months": "месяцы",
+    "workFixJob": "фиксированные цены",
     "all": "все",
     "completed": "выполненные",
     "unclosed": "незакрытые",
@@ -52,6 +53,9 @@
     "pause": "пауза",
     "paid": "оплаченые",
     "unpaid": "неоплаченые",
-    "complete": "завершить"
+    "confirmFilterMsg": "стандартные фильтры будут очищены. Продолжить?",
+    "complete": "завершить",
+    "yes": "да",
+    "not": "нет"
   }
 }
