--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -26,12 +26,14 @@
     "TableNumLabel": "Показ записів від {first} до {last} з {totalRecords}",
     "menu": "меню",
     "customer": "замовника",
+    "workFixJob": "Фіксовані ціни",
     "dateTo": "дата до",
     "date": "дата",
     "dateFrom": "дата від ",
     "days": "дні",
     "openCropped": "відкр.",
     "closeCropped": "закр.",
+    "confirmFilterMsg": "стандартні фільтри будуть очищені. Продовжити?",
     "workOnExecution": "роботи на виконанні",
     "months": "місяці",
     "all": "всі",
@@ -52,6 +54,8 @@
     "pause": "пауза",
     "paid": "оплачені",
     "unpaid": "неоплачені",
-    "complete": "завершити"
+    "complete": "завершити",
+    "yes": "так",
+    "not": "ні"
   }
 }
