--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -56,6 +56,10 @@
     "confirmFilterMsg": "standardowe filtry zostaną wyczyszczone. Kontynuować?",
     "complete": "zakończyć",
     "yes": "tak",
+    "statusNoComp": "nie wykonano",
+    "statusComp": "gotowe",
+    "statusPerformed": "wykonane",
+
     "not": "nie"
   }
 }
