--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -55,6 +55,10 @@
     "paid": "оплачені",
     "unpaid": "неоплачені",
     "complete": "завершити",
+    "statusNoComp": "не виконано",
+    "statusComp": "виконано",
+    "statusPerformed": "виконується",
+
     "yes": "так",
     "not": "ні"
   }
